updated till the header

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Gothic+As1:wght@400;500;600;700;800;900&family=Inter:ital,opsz,wght@0,14..32,800;1,14..32,800&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
     rel="stylesheet">
-  <title>Kiran Diagnostic</title>
+  <title>Delight Diagnostic</title>
 </head>
 
 <body>
